# sales-lead-gen

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  Makefile  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00a8dbe281c1_add_linkedin_last_scraped_at.py  29174d634a2d_add_other_to_signaltype.py  a1b2c3d4e5f6_add_archived_to_companystatus.py  a1b2c3d4e5f6_add_linkedin_last_scraped_at.py  a2b3c4d5e6f7_add_trgm_indexes_for_company_search.py  b2c3d4e5f6a7_drop_redundant_ix_companies_domain.py  b4c5d6e7f8a9_add_icp_score_index.py  c3d4e5f6a7b8_add_is_processed_to_signals.py  d4e5f6a7b8c9_fix_icp_profiles_defaults.py  e5f6a7b8c9d0_add_lead_score_to_companies.py  ef6ca7893d4e_create_initial_tables.py  f1a2b3c4d5e6_add_discovery_jobs_table.py  o0p1q2r3s4t5_add_app_settings_table.py  (+19 more)
backend/app/: main.py
backend/prompts/: __init__.py  action_recommendation.py  company_extraction.py  company_profile.py  config.py  config_loader.py  contact_extraction.py  contact_finder.py  manager.py  relevance_scoring.py  signal_classification.py
backend/scripts/: export_openapi.py  test_google_vertex.py  test_llm.py
backend/tests/: conftest.py  test_action_orchestrator.py  test_api_errors.py  test_auth.py  test_base_client.py  test_bedrijfsdata_client.py  test_clickup_api.py  test_clickup_service.py  test_company_subresources.py  test_discovery.py  test_encryption.py  test_firecrawl_client.py  test_health.py  test_hunter_client.py  test_icp_profiles.py  test_intel_target_urls.py  test_llm_service.py  test_prompt_config.py  test_prompt_templates.py
(+161 files in other folders)
